--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,12 +3,13 @@ FROM python:3.10
 ARG DEBIAN_FRONTEND=noninteractive
 SHELL ["/bin/bash", "-c"]
 
+WORKDIR /mpc_ws
+
 # install requirements
+COPY docker/requirements.txt .
 RUN pip install --no-cache-dir --requirement requirements.txt
 
-
 # Copy the python project
-WORKDIR ~/mpc_ws
 COPY mpc_pybullet_demo ./
 
 # Execute the command passed into this entrypoint
